Initial commit (download images frm a collection)

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+.classpath
+.project
+.settings
 target/
 pom.xml.tag
 pom.xml.releaseBackup
@@ -9,3 +12,9 @@ buildNumber.properties
 .mvn/timing.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
+*.bmp
+*.jpeg
+*.jpg
+*.jp2
+*.pdf
+*.tiff
