--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,8 @@
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
-		<sonar.organization>toolforge</sonar.organization>
-		<sonar.projectKey>toolforge_omeka-java-client</sonar.projectKey>
+		<sonar.organization>don-vip</sonar.organization>
+		<sonar.projectKey>don-vip_omeka-java-client</sonar.projectKey>
 		<sonar.moduleKey>${project.artifactId}</sonar.moduleKey>
 		<collections4-version>4.4</collections4-version>
 		<jsonld-version>0.13.4</jsonld-version>
